<resources>
    <string name="app_name">Su you think you can Doku</string>
    <string name="app_id">801200029873</string>
    <string name="transition1">Transition 1</string>
    <string name="transition2">Transition 2</string>
    <string name="transition3">Transition 3</string>
    <string name="transition4">Transition 4</string>
    <string name="activityExplode">Activity Explode In</string>
    <string name="background_transition">Background Transition</string>
    <string name="signin_failure">Error Signing In</string>
    <string name="achievement1">CgkIsYH52agXEAIQAQ</string>
    <string name="achievement2">CgkIsYH52agXEAIQAg</string>
    <string name="achievement3">CgkIsYH52agXEAIQAw</string>
    <string name="achievement4">CgkIsYH52agXEAIQBA</string>
    <string name="achievement5">CgkIsYH52agXEAIQBQ</string>
</resources>
