<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="@string/background_transition"
    android:background="#4b4b4b"
    android:id="@+id/main_menu_acivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.scottlindley.suyouthinkyoucandoku.MainMenuActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <android.support.v7.widget.CardView
            android:id="@+id/solo_card"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:transitionName="@string/transition1"
            app:cardCornerRadius="15dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:layout_column="0"
            android:layout_row="0">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Solo"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#eee"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/race_card"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_toRightOf="@id/solo_card"
            android:transitionName="@string/transition2"
            app:cardCornerRadius="15dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:layout_column="1"
            android:layout_row="0">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Race"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#eee"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/stats_card"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@id/solo_card"
            android:transitionName="@string/transition4"
            app:cardCornerRadius="15dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:layout_column="0"
            android:layout_row="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Stats"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#eee"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/armory_card"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_below="@id/solo_card"
            android:layout_toRightOf="@id/stats_card"
            android:transitionName="@string/transition3"
            app:cardCornerRadius="15dp"
            android:layout_margin="2dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:layout_column="1"
            android:layout_row="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="Armory"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#eee"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/tinyActivity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="15dp"
        android:backgroundTint="@color/colorAccent"
        android:transitionName="@string/activityExplode"
        android:layout_centerInParent="true"/>
</RelativeLayout>
